--- a/client/src/components/SeparateCards.css
+++ b/client/src/components/SeparateCards.css
@@ -1,15 +1,15 @@
-.alllmoviesgrid {
-  display: grid;
-  gap: 10px;
-  /* text-align: center; */
-  /* padding-left: 170px; */
-  grid-template-columns: repeat(4, 1fr);
-  margin: 0 auto;
-  text-align: left;
-  padding: 5px;
-}
+/* .alllmoviesgrid { */
+/* display: grid;
+  gap: 10px; */
+/* text-align: center; */
+/* padding-left: 170px; */
+/* grid-template-columns: repeat(4, 1fr);
+  margin: 0 auto; */
+/* text-align: left; */
+/* padding: 5px; */
+/* } */
 
-.container {
+/* .container {
   background-color: blue;
   justify-content: center;
-}
+} */
