--- a/client/src/Pages/Homepage/Homepage.css
+++ b/client/src/Pages/Homepage/Homepage.css
@@ -27,6 +27,9 @@
 h2 {
   color: white;
   text-align: left;
-  padding: 10px;
-  padding-left: 20px;
+  font-size: 20px;
+  padding-top: 10px;
+}
+.container {
+  padding-bottom: 10px;
 }
