--- a/client/src/components/SeparateCards.css
+++ b/client/src/components/SeparateCards.css
@@ -13,3 +13,10 @@
   background-color: blue;
   justify-content: center;
 } */
+#buttononrecipe {
+	margin: auto 0 0;
+	position: absolute;
+	left: 161px;
+	top: 0px;
+	border-radius: 5px;
+}
