--- a/client/src/Pages/Register/Register.css
+++ b/client/src/Pages/Register/Register.css
@@ -10,3 +10,14 @@ label {
 	text-align: left;
 	justify-content: center;
 }
+
+#btn2 {
+	top: 0;
+	left: 120px;
+	position: absolute;
+	width: 140px;
+	height: 100%;
+	background: linear-gradient(to right, #bb2d3b, #ffad06);
+	border-radius: 30px;
+	transition: 0.5s;
+}
