--- a/client/src/Pages/Login/Login.css
+++ b/client/src/Pages/Login/Login.css
@@ -1,3 +1,30 @@
 #buttonlogin {
 	margin: 10px;
 }
+.button-box {
+	width: 260px;
+	margin: 35px auto;
+	position: relative;
+	box-shadow: 0 0 20px 9px #bb2d3b;
+	border-radius: 30px;
+}
+
+.toggle-btn {
+	padding: 10px 30px;
+	cursor: pointer;
+	background: transparent;
+	border: 0;
+	outline: none;
+	position: relative;
+	color: aliceblue;
+}
+#btn {
+	top: 0;
+	left: 0;
+	position: absolute;
+	width: 140px;
+	height: 100%;
+	background: linear-gradient(to right, #bb2d3b, #ffad06);
+	border-radius: 30px;
+	transition: 0.5s;
+}
